# timdex-embeddings

./: .aws-architecture  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-amd64-gpu  Dockerfile-arm64-cpu  Dockerfile-cpu  Dockerfile-gpu  Dockerfile.nogpu  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  dev-build.yml  prod-deploy.yml  stage-build.yml
docs/: continuous-delivery-parallel-builds.md
docs/adrs/: 01-parallel-builds-both-archs.md
embeddings/: cli.py  config.py  embedding.py
embeddings/models/: base.py  os_neural_sparse_doc_v3_gte.py  registry.py
embeddings/strategies/: __init__.py  base.py  full_record.py  processor.py  registry.py
tests/: conftest.py  test_cli.py  test_config.py  test_models.py  test_os_neural_sparse_doc_v3_gte.py  test_strategies.py
tests/fixtures/cli_inputs/: test-100-records.jsonl  test-1000-records.jsonl  test-3-records.jsonl
