# We do our best to sync this template with the latest version in our internal documentation.
# For MIT developers, we strongly recommend copying the pyproject.toml template from:
# https://mitlibraries.atlassian.net/wiki/spaces/IN/pages/3432415247/Python+Project+Linters#Template-for-pyproject.toml

[project]
name = "timdex-embeddings"
version = "2.0.0"
requires-python = ">=3.12"

dependencies = [
    "click>=8.2.1",
    "huggingface-hub>=0.26.0",
    "jsonlines>=4.0.0",
    "sentence-transformers>=5.1.2",
    "sentry-sdk>=2.34.1",
    "smart-open[s3]>=7.4.4",
    "timdex-dataset-api",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coveralls>=4.0.1",
    "ipython>=9.6.0",
    "mypy>=1.17.1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

# dependency group for local virtual environment development work
local = [
    "torch>=2.6,<2.7",
]

# dependency group for arm64 / CPU AWS Deep Learning Container (DLC) base image
dlc_arm64_cpu = []

# dependency group for amd64 / GPU AWS Deep Learning Container (DLC) base image
dlc_amd64_gpu = []

[tool.black]
line-length = 90

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = [
    "tests/",
    "output/"
]

[[tool.mypy.overrides]]
module = [
    "timdex_dataset_api.*",
    "smart_open.*",
]
follow_untyped_imports = true


[tool.pytest.ini_options]
log_level = "INFO"

[tool.ruff]
target-version = "py312"

# set max line length
line-length = 90

# enumerate all fixed violations
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
    "COM812",
    "D107", 
    "N812", 
    "PTH", 
    "C90",
    "D100",
    "D101", 
    "D102",
    "D103",
    "D104",
    "EM101",
    "EM102",
    "G004",
    "PLR0912",
    "PLR0913", 
    "PLR0915",
    "S321",
    "TD002",
    "TD003",
    "TRY003",
]

# allow autofix behavior for specified rules
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "PLR2004",
    "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
timdex-dataset-api = { git = "https://github.com/MITLibraries/timdex-dataset-api" }

[project.scripts]
embeddings = "embeddings.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["embeddings"]
